#675 Fix scopebar styling issues when using dark mode

--- a/code/libraries/joomlatools/component/koowa/resources/assets/css/admin.css
+++ b/code/libraries/joomlatools/component/koowa/resources/assets/css/admin.css
@@ -14263,6 +14263,12 @@ html .form-inline .select2-container--bootstrap {
   --gutter-x: 0rem;
   --gutter-y: 0.5rem;
 }
+.k-ui-j5-administrator .k-scopebar__item.k-scopebar__item--filters .k-scopebar-dropdown__button {
+  color: rgb(0, 0, 0) !important;
+}
+.k-ui-j5-administrator .select2-container {
+  color: rgb(33, 37, 41) !important;
+}
 
 .k-ui-j4-form .k-ui-namespace {
   /**
